# agentic-sysadmin

./: .dockerignore  .env.example  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  run_task.py  test_empty_reset.py  test_graders.py  test_reset.py  test_routes.py
agentic_sysadmin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
env/: __init__.py  core.py  grader_common.py  grader_utils.py  models.py  registry.py
scripts/: validate_all.py
server/: app.py
tasks/: task_explanations.txt
tasks/2k_vs_200k/: Dockerfile  grader.py  setup.py  task_brief.txt
tasks/authoritarian_ssh/: Dockerfile  grader.py  setup.py  task_brief.txt
tasks/ls_cat_trivia/: Dockerfile  grader.py  setup.py  task_brief.txt
tasks/math_is_not_mathing/: Dockerfile  daemon.py  grader.py  setup.py  task_brief.txt
tasks/mmap_exhaustion/: Dockerfile  grader.py  setup.py  task_brief.txt  tick_parser.cpp
tasks/pls_adopt_me/: Dockerfile  grader.py  setup.py  task_brief.txt
workspace/: README.txt
workspace/etc/: fstab  group  hostname  hosts  ld.so.preload  motd  os-release  passwd  resolv.conf  shadow  sudoers
workspace/etc/cron.d/: healthcheck
workspace/etc/demo-api/: demo-api.env
workspace/etc/nginx/sites-available/: default
workspace/etc/ssh/: sshd_config
workspace/etc/systemd/system/: demo-api.service
workspace/opt/app/: app.py  healthcheck.py
workspace/proc/: meminfo  version
workspace/var/log/: syslog
workspace/var/www/html/: index.html
